examples/failing/f005-scopes.sq
fn main() {
    {        
        var y: u32;
        y = 13;
    }

    print32(y);
}